# bevy-study

./: Cargo.toml  README.md
assets/rpg/: credits.md  map.ldtk
assets/vn/: credits.md
examples/bare/: main.rs
examples/chess/: README.md  core.rs
examples/chess/core/: app.rs  camera.rs  config.rs  light.rs
examples/chess/game/: board.rs  pieces.rs
examples/minesweeper/: README.md  core.rs  main.rs
examples/minesweeper/core/: app.rs  board.rs  config.rs  coordinates.rs  tile.rs  tile_map.rs
examples/minesweeper/core/board/: options.rs  plugin.rs
examples/rpg/: README.md  core.rs  dialogue.rs  main.rs  snow.rs
examples/rpg/core/: app.rs  camera.rs  config.rs  fader.rs  state.rs
examples/rpg/fader/: plugin.rs
examples/rpg/level/: plugin.rs
examples/rpg/menu/: main.rs  options.rs  plugin.rs
examples/rpg/splashscreen/: plugin.rs
examples/rpg/startup/: plugin.rs
examples/snake/: README.md  core.rs
examples/snake/core/: app.rs  cell.rs  food.rs  snake.rs
examples/space-invaders/: README.md
examples/space-invaders/core/: app.rs
examples/tetris/: README.md  core.rs  game.rs  main.rs
examples/tetris/core/: app.rs  camera.rs  cell.rs  config.rs  grid.rs  icon.rs  tetris.rs  tetromino.rs
examples/tetris/game/: block.rs  cell.rs  collission.rs  coords.rs  gravity.rs  grid.rs  input.rs  screen.rs  tetris.rs  tetromino.rs
examples/vn/: README.md  main.rs
examples/vn/core/: app.rs  config.rs  state.rs
examples/vn/fader/: plugin.rs
examples/vn/lib/: plugin.rs
examples/vn/menu/: main.rs  mod.rs  options.rs  plugin.rs
examples/vn/scene/: plugin.rs
src/: main.rs
src/template/: README.md  main.rs
src/template/core/: app.rs  config.rs
