[package]
name = "bevy-study"
version = "0.1.0"
edition = "2021"
authors = ["eyzi <contact@eyzi.dev>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["bevy", "gamedev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
serde = "1.0"
rand = "0.8.5"
winit = "0.26.1"
image = "0.24.4"
bevy_mod_picking = "0.9.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
