[package]
name = "bevy-study"
version = "0.2.0"
edition = "2021"
authors = ["eyzi <contact@eyzi.dev>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["bevy", "gamedev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
serde = "1.0"
rand = "0.8.5"
winit = "0.27.5"
image = "0.24.4"
bevy_mod_picking = "0.9"
bevy-inspector-egui = "0.14"
bevy_ecs_tilemap = "0.9"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
